# PE_analyst

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/domain/: __init__.py  common.py  company.py  document.py  evidence.py
src/pe_analyst/: __init__.py
src/pe_analyst/core/: __init__.py  config.py  constants.py  enums.py  exceptions.py  logging.py
src/pe_analyst/domain/: __init__.py  common.py  company.py  document.py  evidence.py
src/pe_analyst/engines/: __init__.py
src/pe_analyst/engines/financial/: __init__.py  analyzers.py  engine.py  growth.py  models.py  ratios.py
src/pe_analyst/schemas/: __init__.py  financials.py
src/pe_analyst/valuation/: __init__.py  assumptions.py  dcf.py  discount.py  engine.py  exceptions.py  multiples.py  peer.py  projections.py  report.py  results.py  statistics.py  terminal.py
tests/: conftest.py
tests/unit/: test_company.py  test_core.py  test_dcf.py  test_discount.py  test_document.py  test_evidence.py  test_financial_models.py  test_growth.py  test_multiples.py  test_peer.py  test_ratios.py  test_statistics.py  test_terminal.py
