[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pe-analyst"
version = "0.1.0"

description = "An evidence-grounded agentic AI system for private equity investment analysis and decision support."

readme = "README.md"

requires-python = ">=3.11"

authors = [
    { name = "PE-Analyst Contributors" }
]

dependencies = [
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-dotenv>=1.0,<2.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "numpy-financial>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "httpx>=0.28,<1.0",
]


[project.optional-dependencies]

dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.9,<1.0",
    "mypy>=1.14,<2.0",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]

pythonpath = [
    "src"
]

addopts = "-ra -q"


[tool.ruff]
target-version = "py311"

line-length = 100

src = [
    "src",
    "tests"
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

ignore = []


[tool.mypy]
python_version = "3.13"

strict = true

warn_return_any = true

warn_unused_configs = true

disallow_untyped_defs = true

no_implicit_optional = true

plugins = [
    "pydantic.mypy"
]   